much more fix balance whitespace looks better

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ nav{
   border-width:0 2px 0 0;
   border-style: solid;
   border-color: #000;
-  width: 5em;
+  width: 4.5em;
   float: left;
   font-size: 2em;
   font-weight: 300;
@@ -86,8 +86,10 @@ nav a:link, nav a:visited{
 }
 
 #content{
+  /* max-width: 50em; */
+  min-width: 20em;
   margin: 0;
-  padding:0 5em 1.7em;
+  padding:0 15em 1.7em 10em;
   overflow: hidden;
 
 }
@@ -116,8 +118,6 @@ nav a:link, nav a:visited{
 
 article{
   margin: 0 auto;
-  max-width: 50em;
-  min-width: 20em;
 }
 
 article p{
